--- a/Projeto Formulário/css/formulario.css
+++ b/Projeto Formulário/css/formulario.css
@@ -1,47 +1,9 @@
-/* *{
-    padding: 0;
-    margin: 0;
-    font-family: sans-serif;
-    box-sizing: border-box;
-}
-
-h1{
-    text-align: center;
-    margin-top: 50px;
-}
-
-form{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 400px;
-    padding: 40px;
-    margin: 20px auto;
-    transform: translate(-50%, -55%);
-    background: rgba(0,0,0,.9);
-    box-sizing: border-box;
-    box-shadow: 0 15px 25px rgba(0,0,0,.6);
-    border-radius: 10px;
-}
-
-label{
-    font-weight: bold;
-    margin-bottom: 5px;
-}
-
-#name{
-    padding: 5px;
-    width: 27rem;
-    display: flex;
-    flex-direction: column;
-} */
-
 * {
-  font-family: sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 body {
-    background-color: #6637f3;
+    background-color: #262727;
 }
 
 .login-card {
@@ -57,8 +19,7 @@ body {
 h1 {
   padding: 5px;
   border-radius: 5px;
-  color: white;
-  background-color: #2b4ad3;
+  color: #8d27e0;
   text-align: center;
   margin-bottom: 20px;
 }
@@ -74,6 +35,7 @@ label {
 
 input[type="text"],
 [type="email"] {
+  color: #262727;
   display: flex;
   width: 100%;
   padding: 12px 20px;
@@ -82,6 +44,15 @@ input[type="text"],
   border-radius: 5px;
   box-sizing: border-box;
   transition: 0.5s;
+
+}
+
+#cep{
+  width: 120px;
+}
+
+#uf{
+  width: 65px;
 }
 
 input[type="text"]:hover,
@@ -93,16 +64,18 @@ button {
   margin-left: 50.5rem;
   margin-top: 30px;
   width: 17%;
-  background-color: #6637f3;
+  background-color: #262727;
   color: #ffffff;
   padding: 14px 20px;
   font-size: 20px;
-  border: 3px solid #ffffff;
+  border: 3px solid #8d27e0;
   border-radius: 8px;
   cursor: pointer;
   transition: 0.4s;
+  font-weight: bold;
+  letter-spacing: 0.5px;
 }
 
 button:hover {
-  background-color: #8c69f4;
+  background-color: #8d27e0;
 }
